--- a/.github/workflows/publish-dependency-workflow.yml
+++ b/.github/workflows/publish-dependency-workflow.yml
@@ -1,7 +1,5 @@
 name: Publish dependency package to GitHub Packages
-on:
-  release:
-    types: [created]
+on: push
 jobs:
   publish:
     runs-on: ubuntu-latest
