--- a/.github/workflows/classpathsnapshot-reproduce.yml
+++ b/.github/workflows/classpathsnapshot-reproduce.yml
@@ -2,7 +2,7 @@ name: Reproduce classpath snapshot issue
 on: push
 jobs:
   publish:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     permissions:
       contents: read
       packages: write
