--- a/.github/workflows/classpathsnapshot-reproduce.yml
+++ b/.github/workflows/classpathsnapshot-reproduce.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Build package With 0.0.7 version
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: source:compileKotlin -i
+          arguments: clean source:compileKotlin -i
       - name: Upload 0.0.7 artifact
         uses: actions/upload-artifact@v3
         with:
